knit html again

--- a/bmi_FinalProject.html
+++ b/bmi_FinalProject.html
@@ -128,8 +128,7 @@ library(boot)
 library(janitor)
 library(knitr)
 library(corrplot)
-library(tidyverse)
-library(plyr)</code></pre>
+library(tidyverse)</code></pre>
 <pre class="r"><code>ghc &lt;- readxl::read_excel(&quot;GHProject_Dataset.xlsx&quot;) %&gt;% 
   clean_names()
 
@@ -273,130 +272,13 @@ ghc %&gt;%
 ##  [5] &quot;icu_flag&quot;       &quot;postalcode&quot;     &quot;gender&quot;         &quot;race&quot;          
 ##  [9] &quot;religion&quot;       &quot;maritalstatus&quot;  &quot;facilityname&quot;   &quot;insurancetype&quot;</code></pre>
 <pre class="r"><code>ghc_cate &lt;- ghc %&gt;% 
-  select(c(5:8, 10, 12:18 ))
+  select(c(5, 7, 8, 10, 13:18 )) ## removed admitdtm and postalcode from frequency table
 
-map(ghc_cate, plyr::count) ## categorical variables frequency table</code></pre>
+map(ghc_cate, plyr::count) </code></pre>
 <pre><code>## $is30dayreadmit
 ##   x freq
 ## 1 0 3094
 ## 2 1  518
-## 
-## $admitdtm
-##                                 x freq
-## 1          Friday, April 15, 2016    8
-## 2          Friday, April 29, 2016    2
-## 3         Friday, August 19, 2016   70
-## 4       Friday, December 30, 2016    5
-## 5       Friday, February 05, 2016  106
-## 6        Friday, January 22, 2016   45
-## 7        Friday, January 29, 2016    3
-## 8           Friday, June 10, 2016   60
-## 9           Friday, June 17, 2016    2
-## 10          Friday, June 24, 2016    5
-## 11         Friday, March 11, 2016   23
-## 12           Friday, May 20, 2016    3
-## 13       Friday, October 21, 2016    1
-## 14     Friday, September 09, 2016   72
-## 15     Friday, September 16, 2016    2
-## 16     Friday, September 23, 2016    1
-## 17         Monday, April 18, 2016    4
-## 18        Monday, August 22, 2016    1
-## 19      Monday, February 08, 2016    7
-## 20       Monday, January 25, 2016  133
-## 21          Monday, June 13, 2016  121
-## 22          Monday, June 27, 2016   76
-## 23         Monday, March 07, 2016  139
-## 24         Monday, March 14, 2016    1
-## 25         Monday, March 28, 2016   57
-## 26           Monday, May 02, 2016    3
-## 27           Monday, May 16, 2016  136
-## 28      Monday, November 21, 2016   48
-## 29      Monday, November 28, 2016   68
-## 30     Monday, September 05, 2016   47
-## 31     Monday, September 12, 2016    1
-## 32     Monday, September 26, 2016    1
-## 33       Saturday, April 16, 2016    4
-## 34       Saturday, April 30, 2016   10
-## 35      Saturday, August 20, 2016   58
-## 36    Saturday, February 06, 2016  139
-## 37     Saturday, January 23, 2016   32
-## 38        Saturday, June 11, 2016   92
-## 39        Saturday, June 25, 2016    1
-## 40       Saturday, March 12, 2016   24
-## 41         Saturday, May 14, 2016    2
-## 42   Saturday, September 10, 2016   62
-## 43   Saturday, September 17, 2016    1
-## 44   Saturday, September 24, 2016    5
-## 45         Sunday, April 17, 2016    3
-## 46        Sunday, August 21, 2016   22
-## 47      Sunday, February 07, 2016   21
-## 48       Sunday, January 24, 2016    8
-## 49          Sunday, June 12, 2016   95
-## 50          Sunday, June 19, 2016    3
-## 51          Sunday, June 26, 2016   33
-## 52         Sunday, March 06, 2016   75
-## 53         Sunday, March 13, 2016    1
-## 54           Sunday, May 01, 2016   37
-## 55           Sunday, May 15, 2016   79
-## 56      Sunday, November 20, 2016    1
-## 57      Sunday, November 27, 2016   36
-## 58       Sunday, October 16, 2016    1
-## 59     Sunday, September 11, 2016   17
-## 60     Sunday, September 18, 2016    1
-## 61     Sunday, September 25, 2016    1
-## 62       Thursday, April 14, 2016   10
-## 63       Thursday, April 28, 2016  116
-## 64      Thursday, August 18, 2016   55
-## 65    Thursday, December 29, 2016    9
-## 66    Thursday, February 11, 2016    4
-## 67     Thursday, January 28, 2016    1
-## 68        Thursday, June 09, 2016    4
-## 69        Thursday, June 16, 2016    3
-## 70        Thursday, June 23, 2016  104
-## 71       Thursday, March 31, 2016    1
-## 72         Thursday, May 19, 2016    2
-## 73    Thursday, November 24, 2016    1
-## 74     Thursday, October 20, 2016    3
-## 75   Thursday, September 08, 2016   36
-## 76   Thursday, September 15, 2016    1
-## 77   Thursday, September 22, 2016    2
-## 78        Tuesday, April 12, 2016  106
-## 79        Tuesday, April 19, 2016    1
-## 80     Tuesday, February 09, 2016   68
-## 81      Tuesday, January 12, 2016    2
-## 82      Tuesday, January 26, 2016  104
-## 83         Tuesday, June 07, 2016   50
-## 84         Tuesday, June 14, 2016    9
-## 85         Tuesday, June 21, 2016    1
-## 86         Tuesday, June 28, 2016    2
-## 87        Tuesday, March 08, 2016    9
-## 88        Tuesday, March 29, 2016   74
-## 89          Tuesday, May 17, 2016    5
-## 90          Tuesday, May 24, 2016    1
-## 91     Tuesday, November 22, 2016   43
-## 92     Tuesday, November 29, 2016    6
-## 93      Tuesday, October 18, 2016    5
-## 94    Tuesday, September 06, 2016   56
-## 95    Tuesday, September 13, 2016    2
-## 96    Tuesday, September 20, 2016   58
-## 97      Wednesday, April 13, 2016  145
-## 98      Wednesday, April 27, 2016   93
-## 99     Wednesday, August 17, 2016    1
-## 100    Wednesday, August 24, 2016    2
-## 101  Wednesday, February 10, 2016   90
-## 102   Wednesday, January 13, 2016    1
-## 103      Wednesday, June 01, 2016    1
-## 104      Wednesday, June 08, 2016   41
-## 105      Wednesday, June 15, 2016    4
-## 106      Wednesday, June 22, 2016   84
-## 107      Wednesday, June 29, 2016    2
-## 108     Wednesday, March 09, 2016    3
-## 109     Wednesday, March 30, 2016    4
-## 110       Wednesday, May 18, 2016    2
-## 111  Wednesday, November 23, 2016    1
-## 112  Wednesday, November 30, 2016    2
-## 113 Wednesday, September 07, 2016    5
-## 114 Wednesday, September 21, 2016   62
 ## 
 ## $mews
 ##       x freq
@@ -428,292 +310,6 @@ map(ghc_cate, plyr::count) ## categorical variables frequency table</code></pre>
 ##   x freq
 ## 1 0 3549
 ## 2 1   63
-## 
-## $postalcode
-##         x freq
-## 1   10001    1
-## 2   10003    1
-## 3   10011    1
-## 4   10019    1
-## 5   10022    1
-## 6   10023    1
-## 7   10024    1
-## 8   10025    3
-## 9   10029    1
-## 10  10032    3
-## 11  10039    1
-## 12  10075    2
-## 13  10303    1
-## 14  10305    1
-## 15  10306    1
-## 16  10312    1
-## 17  10314    1
-## 18  10368    1
-## 19  10451    1
-## 20  10452    1
-## 21  10453    2
-## 22  10455    1
-## 23  10458    1
-## 24  10460    1
-## 25  10461    1
-## 26  10465    3
-## 27  10469    3
-## 28  10472    1
-## 29  10473    1
-## 30  10552    1
-## 31  10567    1
-## 32  10583    1
-## 33  10589    1
-## 34  10705    1
-## 35  10960    1
-## 36  10977    1
-## 37  11001   39
-## 38  11003   58
-## 39  11004   36
-## 40  11005   14
-## 41  11010   32
-## 42  11020    9
-## 43  11021   38
-## 44  11023   13
-## 45  11024   15
-## 46  11030   11
-## 47  11040   53
-## 48  11050   22
-## 49  11096    4
-## 50  11101    4
-## 51  11102    2
-## 52  11103    3
-## 53  11104    6
-## 54  11105    4
-## 55  11106    5
-## 56  11132    1
-## 57  11201    2
-## 58  11202    1
-## 59  11204    2
-## 60  11206    2
-## 61  11207    7
-## 62  11208    8
-## 63  11210    3
-## 64  11211    4
-## 65  11212    2
-## 66  11213    2
-## 67  11214    1
-## 68  11216    2
-## 69  11218    1
-## 70  11221    3
-## 71  11222    5
-## 72  11223    3
-## 73  11225    1
-## 74  11226    1
-## 75  11233    1
-## 76  11234    1
-## 77  11235    2
-## 78  11236    3
-## 79  11237    7
-## 80  11239    5
-## 81  11255    1
-## 82  11354   15
-## 83  11355    8
-## 84  11356   10
-## 85  11357   29
-## 86  11358   22
-## 87  11360   30
-## 88  11361   34
-## 89  11362   20
-## 90  11363    6
-## 91  11364   37
-## 92  11365   34
-## 93  11366   11
-## 94  11367   17
-## 95  11368   80
-## 96  11369   21
-## 97  11370    8
-## 98  11372   19
-## 99  11373   31
-## 100 11374   70
-## 101 11375  120
-## 102 11377   24
-## 103 11378   21
-## 104 11379   36
-## 105 11385   38
-## 106 11411   36
-## 107 11412   58
-## 108 11413   71
-## 109 11414   37
-## 110 11415   12
-## 111 11416   21
-## 112 11417   22
-## 113 11418   22
-## 114 11419   41
-## 115 11420   27
-## 116 11421   20
-## 117 11422   41
-## 118 11423   50
-## 119 11424    1
-## 120 11425    1
-## 121 11426   25
-## 122 11427   44
-## 123 11428   40
-## 124 11429   49
-## 125 11430    1
-## 126 11431    2
-## 127 11432   34
-## 128 11433   36
-## 129 11434   94
-## 130 11435   35
-## 131 11436   16
-## 132 11501    9
-## 133 11507    4
-## 134 11509    1
-## 135 11510    8
-## 136 11514    1
-## 137 11516    2
-## 138 11518    6
-## 139 11520    7
-## 140 11530   14
-## 141 11542   17
-## 142 11545    3
-## 143 11547    1
-## 144 11550   18
-## 145 11552   10
-## 146 11553   10
-## 147 11554   20
-## 148 11557    1
-## 149 11558    1
-## 150 11559    3
-## 151 11560    1
-## 152 11561    8
-## 153 11563   13
-## 154 11565    5
-## 155 11566    7
-## 156 11568    3
-## 157 11570    5
-## 158 11572    6
-## 159 11575    6
-## 160 11576    2
-## 161 11577   12
-## 162 11579    1
-## 163 11580   93
-## 164 11581   23
-## 165 11590   30
-## 166 11596    7
-## 167 11598    5
-## 168 11634    1
-## 169 11691   34
-## 170 11692    8
-## 171 11693   12
-## 172 11694    8
-## 173 11697    2
-## 174 11701   17
-## 175 11702    8
-## 176 11703    5
-## 177 11704   22
-## 178 11705    2
-## 179 11706   97
-## 180 11709    3
-## 181 11710   10
-## 182 11714   40
-## 183 11715    2
-## 184 11716   15
-## 185 11717   89
-## 186 11718    4
-## 187 11720    2
-## 188 11722   66
-## 189 11725    9
-## 190 11726    4
-## 191 11727    2
-## 192 11729   16
-## 193 11730   30
-## 194 11731    1
-## 195 11732    6
-## 196 11735   31
-## 197 11741    5
-## 198 11742    2
-## 199 11743    9
-## 200 11746   16
-## 201 11747   39
-## 202 11749    4
-## 203 11751   22
-## 204 11752   14
-## 205 11753   16
-## 206 11754    2
-## 207 11755    1
-## 208 11756   30
-## 209 11757   17
-## 210 11758   42
-## 211 11762   10
-## 212 11763    3
-## 213 11764    1
-## 214 11767    1
-## 215 11768    1
-## 216 11769   19
-## 217 11771    8
-## 218 11772    5
-## 219 11776    2
-## 220 11777    1
-## 221 11779    5
-## 222 11780    2
-## 223 11782   19
-## 224 11783   19
-## 225 11784    2
-## 226 11787    5
-## 227 11788    5
-## 228 11789    1
-## 229 11790    4
-## 230 11791   24
-## 231 11793   21
-## 232 11795   16
-## 233 11796    5
-## 234 11797   25
-## 235 11798    6
-## 236 11801   51
-## 237 11802    1
-## 238 11803   64
-## 239 11804   12
-## 240 11901    4
-## 241 11935    1
-## 242 11940    2
-## 243 11946    1
-## 244 11949    1
-## 245 11950    2
-## 246 11951    2
-## 247 11952    1
-## 248 11953    2
-## 249 11965    1
-## 250 11967    2
-## 251 11968    1
-## 252 11975    1
-## 253 11977    1
-## 254 12521    1
-## 255 12553    1
-## 256 12561    1
-## 257 12866    1
-## 258 12986    1
-## 259 14051    1
-## 260 14221    1
-## 261 18324    1
-## 262 18337    1
-## 263 19709    1
-## 264 20019    1
-## 265 21075    1
-## 266 21221    1
-## 267 27406    1
-## 268 27577    1
-## 269 29456    1
-## 270 31404    1
-## 271 32137    1
-## 272 32907    1
-## 273 33134    1
-## 274 33410    1
-## 275 33432    1
-## 276 33434    1
-## 277 33446    2
-## 278 33634    1
-## 279 34109    1
-## 280 34667    1
-## 281 54742    1
-## 282  8889    1
-## 283    NA   32
 ## 
 ## $gender
 ##        x freq
@@ -770,6 +366,7 @@ map(ghc_cate, plyr::count) ## categorical variables frequency table</code></pre>
 ## 2 Medicare 1425
 ## 3  Private 1987
 ## 4     &lt;NA&gt;   34</code></pre>
+<pre class="r"><code>## categorical variables frequency table</code></pre>
 <pre class="r"><code>ghc_conti &lt;- ghc[, -c(1, 2, 5,6,8, 9, 10, 12:18, 26, 27)] %&gt;% 
   drop_na()  
 
